!!!!для материалов из групп не отображаются не прикрепленные операции